[modify] update translate

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?v=202411012130" rel="stylesheet" />
+    <link href="css/styles.css?v=202411252100" rel="stylesheet" />
     <style>
         #mainNav.navbar-shrink .langSelectDesktop {
             margin-top: 15px;
@@ -173,14 +173,14 @@
         <div class="row gx-0  align-items-top mb-5">
             <div class="col-12 p-2 text-center">
                 <h2 class="mb-4" data-i18n="location.title"></h2>
-                <div id="map" style="width: 100%; height: 600px;"></div>
+                <div id="map" style="width: 100%; height: 350px;"></div>
                 <script
                     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAa2zHGo4o_4Fg82SO_i-7UhBABzYxhu6c"></script>
                 <script>
                     function initMap() {
                         var map = new google.maps.Map(document.getElementById('map'), {
                             zoom: 11,
-                            center: { lat: 11.1784, lng: 119.4185 }  // Centered on El Nido
+                            center: { lat: 11.25, lng: 119.4185 }  // Centered on El Nido
                         });
 
                         var locations = [
@@ -1565,7 +1565,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-12 p-2 text-center">
-                    <img class="img-fluid mb-3 mb-lg-5" src="assets/img/hhospitality.group-logo.png" width="180px"
+                    <img class="img-fluid mb-3 mb-lg-5" src="assets/img/hhospitality.group-logo.png"
                         alt="hhospitality.group" />
                     <h2 class="mb-4" data-i18n="csr.title">CORPORATE SOCIAL RESPONSIBILITY BREAKTHROUGHS</h2>
                     <p data-i18n="csr.description">At H Hospitality Group, our commitment goes beyond providing
@@ -1659,18 +1659,52 @@
 
                     </div>
                 </div>
-            <div class="col-lg-12 p-2">
+            <div class="col-lg-6 p-2">
                 <h3 data-i18n="csr.gleeClub.title">HHG Glee Club: The Sound of Music Across El Nido</h3>
                 <p data-i18n="csr.gleeClub.description1">The HHG Glee Club is an employee group within H Hospitality Group Corporation (HHG) that brings everyone together through a shared love for music. As the first hospitality choir in El Nido, the Glee Club represents the spirit of HHG employees, with members from across all our locations – Town, Lio, and Nacpan – joining to create voices of harmony.</p>
                 <p data-i18n="csr.gleeClub.description2">Making its debut on August 18, 2024, at the Inter-Hotel Basketball Friendship Game, the Glee Club opened the event by singing the national anthem, bringing pride to HHG and joy to everyone present. With 13 employee-singers representing the different parts of HHG, the Glee Club introduces sound of music to El Nido.</p>
                 <p data-i18n="csr.gleeClub.description3">More than just a choir, the HHG Glee Club is a testament to HHG's commitment to work-life balance and employee engagement. Through clubs like this, our employees find new avenues to express themselves, connect with colleagues, and take their passions into the workplace. Supported by our Human Resources group, the Glee Club strengthens our belief that HHG is more than just a job – it's a vibrant community where everyone has a voice. As the Glee Club continues to grow, they are already preparing for upcoming performances, connecting to the broader El Nido community.</p>
                 <div class="row">
-                    <div class="col-3"><img class="img-fluid" src="images/csr/music1.jpg" alt="HHG Glee Club 1"></div>
-                    <div class="col-3"><img class="img-fluid" src="images/csr/music2.jpg" alt="HHG Glee Club 2"></div>
-                    <div class="col-3"><img class="img-fluid" src="images/csr/music3.jpg" alt="HHG Glee Club 3"></div>
-                    <div class="col-3"><img class="img-fluid" src="images/csr/music4.jpg" alt="HHG Glee Club 4"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/music1.jpg" alt="HHG Glee Club 1"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/music2.jpg" alt="HHG Glee Club 2"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/music3.jpg" alt="HHG Glee Club 3"></div>
                 </div>
             </div>
+
+
+            <div class="col-lg-6 p-2">
+                <h3 data-i18n="csr.spayingNeutering.title">Spaying and Neutering Stray Dogs and Cats</h3>
+                <p data-i18n="csr.spayingNeutering.description">In collaboration with Vet in Practice, a reputable veterinary group from Manila, we host weekly spaying and neutering clinics for stray dogs and cats in the local community. Over the course of a month, we welcome six groups of five veterinarians, providing them with accommodations in our hotels. These free clinics help control the population of stray animals, improving their welfare and the overall community environment.</p>
+                <div class="row">
+                    <div class="col-4"><img class="img-fluid" src="images/csr/spaying1.webp" alt="Spaying and Neutering 1"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/spaying2.webp" alt="Spaying and Neutering 2"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/spaying3.webp" alt="Spaying and Neutering 3"></div>
+                </div>
+            </div>
+
+
+            <div class="col-lg-6 p-2">
+                <h3 data-i18n="csr.nutritionalLunchProgram.title">Nutritional Lunch Program</h3>
+                <p data-i18n="csr.nutritionalLunchProgram.description">Understanding the challenges faced by undernourished elementary school students, we have launched a program to provide nutritious lunches. This initiative ensures that children in our community have access to the essential nutrients they need for growth, learning, and a brighter future.</p>
+                <div class="row">
+                    <div class="col-4"><img class="img-fluid" src="images/csr/lunchProgram1.webp" alt="Nutritional Lunch Program 1"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/lunchProgram2.webp" alt="Nutritional Lunch Program 2"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/lunchProgram3.webp" alt="Nutritional Lunch Program 3"></div>
+                </div>
+            </div>
+
+
+            <div class="col-lg-6 p-2">
+                <h3 data-i18n="csr.christmasGiftGiving.title">Christmas Gift Giving</h3>
+                <p data-i18n="csr.christmasGiftGiving.description">Every Christmas, we spread joy by distributing gifts to local schoolchildren. This tradition strengthens our bond with the community and brings smiles to the faces of countless children during the holiday season.</p>
+                <div class="row">
+                    <div class="col-4"><img class="img-fluid" src="images/csr/christmasGiftGiving1.webp" alt="Christmas Gift Giving 1"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/christmasGiftGiving2.webp" alt="Christmas Gift Giving 2"></div>
+                    <div class="col-4"><img class="img-fluid" src="images/csr/christmasGiftGiving3.webp" alt="Christmas Gift Giving 3"></div>
+                </div>
+            </div>
+
+            
             </div>
             <div class="row gx-0 align-items-top">
                 <div class="col-12 p-2 text-center">
