--- a/index.html
+++ b/index.html
@@ -1566,7 +1566,7 @@
             <div class="row gx-0 align-items-top mb-5">
                 <div class="col-12 p-2 text-center">
                     <img class="img-fluid mb-3 mb-lg-5" src="assets/img/hhospitality.group-logo.png"
-                        alt="hhospitality.group" />
+                        alt="hhospitality.group" style="height: 50px; object-fit: contain;" />
                     <h2 class="mb-4" data-i18n="csr.title">CORPORATE SOCIAL RESPONSIBILITY BREAKTHROUGHS</h2>
                     <p data-i18n="csr.description">At H Hospitality Group, our commitment goes beyond providing
                         exceptional hospitality; it extends
