--- a/index.html
+++ b/index.html
@@ -172,7 +172,19 @@
         <!-- Featured Project Row-->
         <div class="row gx-0  align-items-top mb-5">
             <div class="col-12 p-2 text-center">
-                <h2 class="mb-4" data-i18n="location.title"></h2>
+                <!-- <h2 class="mb-4" data-i18n="location.title"></h2> -->
+                
+                <div class="d-flex align-items-center justify-content-center mb-4">
+                    <h2 class="mb-0 me-4" data-i18n="location.title"></h2>
+                    <a href="hotel.html" class="text-decoration-none">
+                        <span class="text-secondary mb-0 me-4" data-i18n="nav.hotel"></span>
+                    </a>
+                    <a href="investing.html" class="text-decoration-none">
+                        <span class="text-secondary mb-0" data-i18n="nav.investing"></span>
+                    </a>
+                </div>
+
+
                 <div id="map" style="width: 100%; height: 350px;"></div>
                 <script
                     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAa2zHGo4o_4Fg82SO_i-7UhBABzYxhu6c"></script>
