--- a/lechon-co.html
+++ b/lechon-co.html
@@ -48,6 +48,11 @@
             margin-bottom: 1rem;
         }
 
+        .img-fluid.thumbnail{
+            max-height: 66px;
+            object-fit: cover;
+        }
+
         @media (max-width: 768px) {
             .piece-lio-banner {
                 padding: 5rem 0;
@@ -121,7 +126,7 @@
     <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/placeholder.webp'); height: 60vh; background-size: cover; background-position: center;">
+            <div class="banner-image" style="background-image: url('assets/img/lechon/3.webp'); height: 60vh; background-size: cover; background-position: center;">
                 <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
                         <h1 class="display-3 fw-bold" data-i18n="investing.restaurantsCafeBars.lechonCo.name">Lechon Co by H Hospitality Group</h1>
@@ -148,54 +153,48 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="falafelCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="lechonCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 1">
+                                <img src="assets/img/lechon/1.webp" class="d-block w-100" alt="Lechon Co 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 2">
+                                <img src="assets/img/lechon/2.webp" class="d-block w-100" alt="Lechon Co 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 3">
+                                <img src="assets/img/lechon/3.webp" class="d-block w-100" alt="Lechon Co 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 4">
+                                <img src="assets/img/lechon/4.webp" class="d-block w-100" alt="Lechon Co 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 5">
+                                <img src="assets/img/lechon/5.webp" class="d-block w-100" alt="Lechon Co 5">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/placeholder.webp" class="d-block w-100" alt="Lechon Co 6">
+                                <img src="assets/img/lechon/6.webp" class="d-block w-100" alt="Lechon Co 6">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#falafelCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#lechonCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.previous">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#falafelCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#lechonCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="0">
+                            <img src="assets/img/lechon/1.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="0">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="1">
+                            <img src="assets/img/lechon/3.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="2">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="2">
+                            <img src="assets/img/lechon/4.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="3">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="3">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="4">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/placeholder.webp" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="5">
+                            <img src="assets/img/lechon/5.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="4">
                         </div>
                     </div>
                 </div>
