[modify] hide casa

--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
                                     </div>
                                     <p class="card-text">Nacpan Beach Shuttle</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-xl-4 col-lg-4 col-6 p-1 d-none">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal7">
