--- a/investing.html
+++ b/investing.html
@@ -311,7 +311,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
+                                <!-- <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                     <a href="casa-celica.html">
                                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/casa/casa_1.jpg"
                                             alt="C Hotel (Casa Cecilia)" />
@@ -331,7 +331,7 @@
                                                 Center</li>
                                         </ul>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                     <a href="#">
                                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/placeholder.webp"
