--- a/hotel.html
+++ b/hotel.html
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-2 mb-5">
+                <!-- <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-2 mb-5">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#casaCeciliaModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="assets/img/casa/casa_1.jpg" alt="Casa Cecilia" />
                     </a>
@@ -235,7 +235,7 @@
                             <a href="https://www.facebook.com/CasaCeciliaHotel" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-2 mb-5">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachVillasModal">
                         <img class="img-fluid mb-3 mb-lg-0" src="images/nacpan_beach_villa/1.webp" alt="Nacpan Beach Villas" />
