--- a/zh-tw.html
+++ b/zh-tw.html
@@ -986,10 +986,10 @@ document.addEventListener('DOMContentLoaded', function() {
                                 <div class="col-xl-4 col-lg-4 col-6 p-1">
 
                                     <!-- Image trigger modal -->
-                                    <a href="#" data-bs-toggle="modal" data-bs-target="#myModal7">
+                                    <!-- <a href="#" data-bs-toggle="modal" data-bs-target="#myModal7">
                                         <img class="img-fluid mb-lg-2 mb-2" src="assets/img/time-Casa-Cecelia.jpg"
                                             alt="Casa Cecelia" />
-                                    </a>
+                                    </a> -->
                                     <!-- Modal -->
                                     <div class="modal fade" id="myModal7" tabindex="-1"
                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
