[modify] change lechon image

--- a/investing.html
+++ b/investing.html
@@ -334,7 +334,7 @@
                                 </div> -->
                                 <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                     <a href="#">
-                                        <img class="img-fluid mb-3 mb-lg-0" src="assets/img/placeholder.webp"
+                                        <img class="img-fluid mb-3 mb-lg-0" src="images/milan-grace/1.webp"
                                             alt="Z Garden Hotel" />
                                     </a>
                                     <div class="featured-text text-center text-lg-left pt-3">
@@ -574,7 +574,7 @@
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
                                         <a href="lechon-co.html">
-                                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/lechon/2.webp"
+                                            <img class="img-fluid mb-3 mb-lg-0" src="images/lechon-co/1.webp"
                                                 alt="Lechon Co by H Hospitality Group"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
                                         </a>
