--- a/lechon-co.html
+++ b/lechon-co.html
@@ -156,22 +156,22 @@
                     <div id="lechonCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/lechon/1.webp" class="d-block w-100" alt="Lechon Co 1">
+                                <img src="images/lechon-co/1.webp" class="d-block w-100" alt="Lechon Co 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/lechon/2.webp" class="d-block w-100" alt="Lechon Co 2">
+                                <img src="images/lechon-co/2.webp" class="d-block w-100" alt="Lechon Co 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/lechon/3.webp" class="d-block w-100" alt="Lechon Co 3">
+                                <img src="images/lechon-co/3.webp" class="d-block w-100" alt="Lechon Co 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/lechon/4.webp" class="d-block w-100" alt="Lechon Co 4">
+                                <img src="images/lechon-co/4.webp" class="d-block w-100" alt="Lechon Co 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/lechon/5.webp" class="d-block w-100" alt="Lechon Co 5">
+                                <img src="images/lechon-co/5.webp" class="d-block w-100" alt="Lechon Co 5">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/lechon/6.webp" class="d-block w-100" alt="Lechon Co 6">
+                                <img src="images/lechon-co/6.webp" class="d-block w-100" alt="Lechon Co 6">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#lechonCarousel" data-bs-slide="prev">
@@ -185,16 +185,22 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/lechon/1.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="0">
+                            <img src="images/lechon-co/1.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="0">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/lechon/3.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="2">
+                            <img src="images/lechon-co/2.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="2">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/lechon/4.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="3">
+                            <img src="images/lechon-co/3.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="3">
                         </div>
                         <div class="col-md-2 col-4 mb-2">
-                            <img src="assets/img/lechon/5.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="4">
+                            <img src="images/lechon-co/4.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="4">
+                        </div>
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="images/lechon-co/5.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="5">
+                        </div>
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="images/lechon-co/6.webp" class="img-fluid thumbnail" data-bs-target="#lechonCarousel" data-bs-slide-to="6">
                         </div>
                     </div>
                 </div>
