--- a/z-garden-hotel.html
+++ b/z-garden-hotel.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Oriental Spa 2 - H Hospitality Group" />
+    <meta property="og:title" content="Piece Lio - H Hospitality Group" />
     <meta property="og:description"
-        content="El Nido's newest luxury wellness spa with 40 massage stations, offering spacious and private comfort for travelers." />
-    <meta property="og:url" content="https://hhospitality.group/oriental-spa-2.html" />
+        content="Experience luxury and tranquility at Piece Lio, a world-class beachfront resort in El Nido, Palawan." />
+    <meta property="og:url" content="https://hhospitality.group/piece-lio.html" />
     <meta property="og:site_name" content="H Hospitality Group" />
-    <meta property="og:image" content="https://hhospitality.group/assets/img/Oriental-Spa/Oriental-Spa_1.jpg" />
+    <meta property="og:image" content="https://hhospitality.group/assets/img/piece-lio-og-image.jpg" />
     <meta name="format-detection" content="telephone=no">
-    <title>Oriental Spa 2 - H Hospitality Group</title>
+    <title>Piece Lio - H Hospitality Group</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" />
     <link rel="apple-touch-icon" href="assets/favicon_io/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" href="assets/favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -31,7 +31,16 @@
         #mainNav .langSelectDesktop {
             margin-top: 25px;
         }
-        
+
+        .piece-lio-banner {
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("images/piecelio/cover.webp");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: scroll;
+            background-size: cover;
+            padding: 10rem 0;
+        }
+
         .carousel-item img {
             height: 500px;
             object-fit: cover;
@@ -46,11 +55,6 @@
             font-size: 2rem;
             color: #64a19d;
             margin-bottom: 1rem;
-        }
-
-        .thumbnail{
-            height: 130px;
-            object-fit: cover;
         }
 
         @media (max-width: 768px) {
@@ -123,14 +127,13 @@
     </nav>
 
     <!-- Banner Section -->
-    <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/Oriental-Spa/Oriental-Spa_1.jpg'); height: 60vh; background-size: cover; background-position: center;">
+            <div class="banner-image" style="background-image: url('images/milan-grace/1.webp'); height: 60vh; background-size: cover; background-position: center;">
                 <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
-                        <h1 class="display-3 fw-bold" data-i18n="investing.spa.orientalSpa2.name">Oriental Spa 2</h1>
-                        <p class="lead" data-i18n="investing.spa.orientalSpa2.location">Next to J Boutique Hotel, El Nido</p>
+                        <h1 class="display-3 fw-bold" data-i18n="hotel.zGardenHotel.name">Z Garden Hotel</h1>
+                        <!-- <p class="lead" data-i18n="hotel.zGardenHotel.location">El Nido Town Center, Palawan</p> -->
                     </div>
                 </div>
             </div>
@@ -143,82 +146,59 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mb-4" data-i18n="investing.spa.orientalSpa2.name">Oriental Spa 2</h1>
-                    <p class="lead mb-4" data-i18n="investing.spa.orientalSpa2.description">Oriental Spa 2 is El Nido's newest luxury wellness spa, featuring 40 massage stations that provide spacious and private comfort for travelers. This standalone building, thoughtfully designed by renowned designer Justin, combines modern design with traditional Eastern therapies to deliver the ultimate relaxation experience for body and mind. This newly opened spa is a must-visit wellness destination during your stay in El Nido.</p>
+                    <h1 class="mb-4" data-i18n="hotel.zGardenHotel.name">Z Garden Hotel</h1>
+                    <p class="lead mb-4" data-i18n="hotel.zGardenHotel.description">Z Garden Hotel is our latest hotel development, scheduled to open in 2025, located next to El Nido port. The hotel rooms are divided into sea view rooms and courtyard view rooms, offering travelers a variety of accommodation options.</p>
                     <div class="hotel-info mb-4">
-                        <h5 data-i18n="hotel.info">Spa Info</h5>
-                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="investing.spa.orientalSpa2.location">Next to J Boutique Hotel, El Nido</span></p>
-                        <p><strong>Seats:</strong> <span data-i18n="investing.spa.orientalSpa2.seats">40</span></p>
-                        <p><strong>Opening Year:</strong> <span data-i18n="investing.spa.orientalSpa2.openingYear">2025</span></p>
+                        <h5 data-i18n="hotel.info">Hotel Info</h5>
+                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.5</span></p>
+                        <!-- <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.zGardenHotel.location">El Nido Town Center, Palawan</span></p> -->
+                        <!-- <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.zGardenHotel.phone">+63 917 567 8901</span></p> -->
+                        <!-- <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://jboutiquehotelelnido.com/" target="_blank">jboutiquehotelelnido.com</a></p> -->
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="falafelCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="jBoutiqueHotelCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/oriental-spa-2/481703338_3046170975538015_6643145342436413833_n.jpg" class="d-block w-100" alt="Oriental Spa 1">
+                                <img src="images/milan-grace/1.webp" class="d-block w-100" alt="Milan Grace Hotel">
+                            </div>
+                            <!-- <div class="carousel-item">
+                                <img src="images/milan-grace/2.webp" class="d-block w-100" alt="Milan Grace Hotel">
+                            </div> -->
+                            <div class="carousel-item">
+                                <img src="images/milan-grace/3.webp" class="d-block w-100" alt="Milan Grace Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/oriental-spa-2/481720332_1395568655580850_5753696952801877104_n.jpg" class="d-block w-100" alt="Oriental Spa 2">
+                                <img src="images/milan-grace/4.webp" class="d-block w-100" alt="Milan Grace Hotel">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/oriental-spa-2/482994389_1282877039679674_2367369281714769740_n.jpg" class="d-block w-100" alt="Oriental Spa 3">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/484411038_1849462289156823_6087008365711868682_n.jpg" class="d-block w-100" alt="Oriental Spa 4">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/484830551_1304008694163436_8008152807927347229_n.jpg" class="d-block w-100" alt="Oriental Spa 5">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/485083750_1027019402667686_6429589439857999011_n.jpg" class="d-block w-100" alt="Oriental Spa 6">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/485084020_541941258921188_1460515622848944970_n.jpg" class="d-block w-100" alt="Oriental Spa 6">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/485084079_1280093893054044_8794012181404860097_n.jpg" class="d-block w-100" alt="Oriental Spa 6">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/oriental-spa-2/485084166_1619076712063012_7500553310333833568_n.jpg" class="d-block w-100" alt="Oriental Spa 6">
+                                <img src="images/milan-grace/5.webp" class="d-block w-100" alt="Milan Grace Hotel">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#falafelCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.previous">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#falafelCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/481703338_3046170975538015_6643145342436413833_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="0">
+                        <div class="col-md-3 col-4 mb-2">
+                            <img src="images/milan-grace/1.webp" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="0">
                         </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/481720332_1395568655580850_5753696952801877104_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="1">
+                        <!-- <div class="col-md-3 col-4 mb-2">
+                            <img src="images/milan-grace/2.webp" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="1">
+                        </div> -->
+                        <div class="col-md-3 col-4 mb-2">
+                            <img src="images/milan-grace/3.webp" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="1">
                         </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/482994389_1282877039679674_2367369281714769740_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="2">
+                        <div class="col-md-3 col-4 mb-2">
+                            <img src="images/milan-grace/4.webp" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="2">
                         </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/484411038_1849462289156823_6087008365711868682_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="3">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/484830551_1304008694163436_8008152807927347229_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="4">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/485083750_1027019402667686_6429589439857999011_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="5">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/485084020_541941258921188_1460515622848944970_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="6">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/485084079_1280093893054044_8794012181404860097_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="7">
-                        </div>
-                        <div class="col-md-2 col-4 mb-2">
-                            <img src="images/oriental-spa-2/485084166_1619076712063012_7500553310333833568_n.jpg" class="img-fluid thumbnail" data-bs-target="#falafelCarousel" data-bs-slide-to="8">
+                        <div class="col-md-3 col-4 mb-2">
+                            <img src="images/milan-grace/5.webp" class="img-fluid thumbnail" data-bs-target="#jBoutiqueHotelCarousel" data-bs-slide-to="3">
                         </div>
                     </div>
                 </div>
