--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                         <div class="card-body p-4">
                             <h3>2023</h3>
                             <div class="row gx-0  align-items-top">
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal1">
                                         <img class="img-fluid mb-lg-2 mb-2 cover" src="assets/img/time-Airbnb-Villa.jpg"
@@ -983,7 +983,7 @@
 
                                     <p class="card-text">Airbnb Villa</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal2">
@@ -1044,7 +1044,7 @@
                                     </div>
                                     <p class="card-text">Ver De El Nido</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal3">
@@ -1107,7 +1107,7 @@
                                     <p class="card-text">Nacpan Beach Resort <span style="color:#c3b39a;">(Agoda
                                             8.9/10)</span></p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal4">
                                         <img class="img-fluid mb-lg-2 mb-2"
@@ -1170,7 +1170,7 @@
                                     <p class="card-text">Nacpan Beach Glamping <span style="color:#c3b39a;">(Agoda
                                             8.6/10)</span></p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal5">
                                         <img class="img-fluid mb-lg-2 mb-2" src="assets/img/time-Oriental-Spa.jpg"
@@ -1230,7 +1230,7 @@
                                     </div>
                                     <p class="card-text">Oriental Spa</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal6">
@@ -1292,7 +1292,7 @@
                                     </div>
                                     <p class="card-text">Nacpan Beach Shuttle</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1 d-none">
+                                <div class="col-6 p-1 d-none">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal7">
@@ -1348,7 +1348,7 @@
                                     </div>
                                     <p class="card-text">Casa Cecelia</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal8">
@@ -1410,7 +1410,7 @@
                                     </div>
                                     <p class="card-text">Sunmai Nacpan Beach</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal9">
                                         <img class="img-fluid mb-lg-2 mb-2"
@@ -1472,7 +1472,7 @@
                                     <p class="card-text">H Hotel Vegan Hotel <span style="color:#c3b39a;">(Agoda
                                             9.3)</span></p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal10">
                                         <img class="img-fluid mb-lg-2 mb-2"
@@ -1534,7 +1534,7 @@
                                     </div>
                                     <p class="card-text">Grounded 100% Arabica</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
 
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal11">
@@ -1596,7 +1596,7 @@
                                     </div>
                                     <p class="card-text">J Boutique Hotel</p>
                                 </div>
-                                <div class="col-xl-4 col-lg-4 col-6 p-1">
+                                <div class="col-6 p-1">
                                     <!-- Image trigger modal -->
                                     <a href="#" data-bs-toggle="modal" data-bs-target="#myModal12">
                                         <img class="img-fluid mb-lg-2 mb-2"
