style(index.html): 优化图片显示样式并移除冗余图片
为多张图片添加 `height: 100%; object-fit: cover;` 样式，确保图片在容器中显示一致。同时移除部分冗余图片以简化页面结构。

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                                             <img src="images/piece-of-sky/2.webp" class="img-fluid">
                                                         </div>
                                                         <div class="col-4 p-1">
-                                                            <img src="images/piece-of-sky/3.webp" class="img-fluid">
+                                                            <img src="images/piece-of-sky/3.webp" class="img-fluid" style="height: 100%; object-fit: cover;">
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/piece-of-sky/5.webp" class="img-fluid">
@@ -412,7 +412,7 @@
                                                             <img src="images/sunmai/6.webp" class="img-fluid">
                                                         </div>
                                                         <div class="col-4 p-1">
-                                                            <img src="images/sunmai/7.webp" class="img-fluid">
+                                                            <img src="images/sunmai/7.webp" class="img-fluid" style="height: 100%; object-fit: cover;">
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/sunmai/8.webp" class="img-fluid">
@@ -442,31 +442,16 @@
                                                 <div class="modal-body">
                                                     <div class="row">
                                                         <div class="col-4 p-1">
-                                                            <img src="images/oriental-spa-2/481703338_3046170975538015_6643145342436413833_n.jpg" class="img-fluid">
-                                                        </div>
-                                                        <div class="col-4 p-1">
-                                                            <img src="images/oriental-spa-2/481720332_1395568655580850_5753696952801877104_n.jpg" class="img-fluid">
-                                                        </div>
-                                                        <div class="col-4 p-1">
-                                                            <img src="images/oriental-spa-2/482994389_1282877039679674_2367369281714769740_n.jpg" class="img-fluid">
-                                                        </div>
-                                                        <div class="col-4 p-1">
                                                             <img src="images/oriental-spa-2/484411038_1849462289156823_6087008365711868682_n.jpg" class="img-fluid">
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/oriental-spa-2/484830551_1304008694163436_8008152807927347229_n.jpg" class="img-fluid">
                                                         </div>
                                                         <div class="col-4 p-1">
-                                                            <img src="images/oriental-spa-2/485083750_1027019402667686_6429589439857999011_n.jpg" class="img-fluid">
-                                                        </div>
-                                                        <div class="col-4 p-1">
                                                             <img src="images/oriental-spa-2/485084020_541941258921188_1460515622848944970_n.jpg" class="img-fluid">
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/oriental-spa-2/485084079_1280093893054044_8794012181404860097_n.jpg" class="img-fluid">
-                                                        </div>
-                                                        <div class="col-4 p-1">
-                                                            <img src="images/oriental-spa-2/485084166_1619076712063012_7500553310333833568_n.jpg" class="img-fluid">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -489,7 +474,7 @@
                                                 <div class="modal-body">
                                                     <div class="row">
                                                         <div class="col-4 p-1">
-                                                            <img src="images/lechon-co/1.webp" class="img-fluid">
+                                                            <img src="images/lechon-co/1.webp" class="img-fluid" style="height: 100%; object-fit: cover;">
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/lechon-co/2.webp" class="img-fluid">
@@ -574,22 +559,22 @@
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/milan-grace/1.webp"
+                                                                    style="height: 100%; object-fit: cover;"
                                                                     alt="Z Garden Hotel 1" />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/milan-grace/3.webp"
-                                                                    alt="Z Garden Hotel 3" />
+                                                                    alt="Z Garden Hotel 3"
+                                                                    style="height: 100%; object-fit: cover;"
+                                                                    />
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/milan-grace/4.webp"
-                                                                    alt="Milan Grace 4" />
-                                                            </div>
-                                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
-                                                                <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/milan-grace/5.webp"
-                                                                    alt="Z Garden Hotel 5" />
+                                                                    alt="Milan Grace 4"
+                                                                    style="height: 100%; object-fit: cover;"
+                                                                     />
                                                             </div>
                                                         </div>
                                                     </div>
