[modify]indexpage modified

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                                 <div class="modal-body">
                                                     <div class="row">
                                                         <div class="col-4 p-1">
-                                                            <img src="images/piece-of-sky/2.webp" class="img-fluid">
+                                                            <img src="images/piece-of-sky/2.webp" class="img-fluid" >
                                                         </div>
                                                         <div class="col-4 p-1">
                                                             <img src="images/piece-of-sky/3.webp" class="img-fluid" style="height: 100%; object-fit: cover;">
@@ -767,12 +767,12 @@
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/nacpan_beach_wedding/7.webp"
-                                                                    alt="Nacpan Beach Wedding 7" />
+                                                                    alt="Nacpan Beach Wedding 7" style="height: 100%; object-fit: cover;"/>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
                                                                     src="images/nacpan_beach_wedding/8.webp"
-                                                                    alt="Nacpan Beach Wedding 8" />
+                                                                    alt="Nacpan Beach Wedding 8" style="height: 100%; object-fit: cover;"/>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -805,27 +805,27 @@
                                                         <div class="row">
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/1.webp" alt="Unocha 1" />
+                                                                    src="images/unocha/1.webp" alt="Unocha 1" >
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/2.webp" alt="Unocha 2" />
+                                                                    src="images/unocha/2.webp" alt="Unocha 2" >
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/3.webp" alt="Unocha 3" />
+                                                                    src="images/unocha/3.webp" alt="Unocha 3" >
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/4.webp" alt="Unocha 4" />
+                                                                    src="images/unocha/4.webp" alt="Unocha 4" style="height: 100%; object-fit: cover;"/>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/5.webp" alt="Unocha 5" />
+                                                                    src="images/unocha/5.webp" alt="Unocha 5" style="height: 100%; object-fit: cover;"/>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
-                                                                    src="images/unocha/6.webp" alt="Unocha 6" />
+                                                                    src="images/unocha/6.webp" alt="Unocha 6" style="height: 100%; object-fit: cover;"/>
                                                             </div>
                                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 p-1">
                                                                 <img class="img-fluid mb-lg-2 mb-2"
